IAC/orchestration/kubernetes/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dev-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - dev.sociium.io
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: dev-sociium-io-tls
  - hosts:
    - dev.sociium.io
    port:
      number: 80
      name: http-sociium
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
